--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -2,15 +2,18 @@
 
     <!-- NAV BAR -->
     <div class="row">
-        <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+        <div class="col-lg-9 col-sm-9 col-md-9 col-xs-6">
             <p class="font-bold font-medium color-mid-grey" style="margin-bottom:0">{{contenuti.current_state.title | uppercase}}</p>
             <p class="font-bold font-medium" style="color: {{contenuti.city.assets_color}}">{{contenuti.city.ds_name | uppercase}} SMART</p>
+        </div>
+        <div class="col-lg-3 col-sm-3 col-md-3 col-xs-6">
+            <button ng-click="contenuti.adminService.logout()" class="btn btn-block-settings pull-right no-margin"><span class="lsf color-grey">logout</span>&nbsp;&nbsp;&nbsp;ESCI</button>
         </div>
     </div>
 
     <!------------- body content ---------->
 
-    <div class="row page_content">
+    <div class="row page_content" style="margin-top:30px;">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <div class="row">
 
