added filter media

--- a/app/features/Media/media.view.html
+++ b/app/features/Media/media.view.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-6 col-xs-6">
-            <button ladda="mediaCtrl.options.articleWorking()" class="btn btn-grey btn-block" ng-click="applyFilters()">
+            <button ladda="mediaCtrl.options.articleWorking()" class="btn btn-grey btn-block" ng-click="mediaCtrl.applyFilters()">
                 APPLICA&nbsp;&nbsp;&nbsp;<span class="lsf">right</span></button>
         </div>
 
