--- a/app/features/Media/media.view.html
+++ b/app/features/Media/media.view.html
@@ -111,7 +111,7 @@
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="row container-fluid container-scroll">
-                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="m in mediaCtrl.medias" style="height: 140px;margin-top:10px;">
+                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="m in mediaCtrl.medias | limitTo:mediaCtrl.options.pager.limit:-(mediaCtrl.options.pager.active*mediaCtrl.options.pager.limit)" style="height: 140px;margin-top:10px;">
                     <!--- images -->
                     <div ng-if="m.type == 'IMAGE'" afkl-lazy-image="{{mediaCtrl.getMediaUrl(m)}}"
                          class="afkl-lazy-wrapper afkl-img-ratio-1-1 own-classname img-responsive" ng-click="mediaCtrl.selectImage(m)"></div>
@@ -122,6 +122,26 @@
                     <div class="clearfix hidden-sm-up"></div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <!-- Single button -->
+            <div class="btn-group pull-right" uib-dropdown is-open="mediaCtrl.options.pager.isopen">
+                <button id="single-button" type="button" class="btn btn-pager mydropdown" uib-dropdown-toggle>
+                    <span class="pull-left">PAGINA {{mediaCtrl.options.pager.active}}</span>
+                    <span class="pull-right lsf ">dropdown</span>
+                </button>
+                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <li role="menuitem" ng-repeat="page in mediaCtrl.generatePages()">
+                        <a ng-click="mediaCtrl.changePage(page)">PAGINA {{page}}</a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </div>
 
