--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -92,7 +92,7 @@
             <div class="row height-30px"  ng-if="home.user.isRedazione()">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <a class="menu_link font-medium color-grey pointer" ui-sref="{{home.ROUTING.segnalazioni.name}}">UTILITA'</a>
+                        <a class="menu_link font-medium color-grey pointer" ui-sref="{{home.ROUTING.utilita.name}}">UTILITA'</a>
                     </div>
                 </div>
             </div>
