--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <script type="text/javascript" src="app/services/category.service.js"></script>
         <script type="text/javascript" src="app/services/edizioni.service.js"></script>
         <script type="text/javascript" src="app/services/media.service.js"></script>
+        <script type="text/javascript" src="app/services/utilita.service.js"></script>
 
         <!-------- UTILS -------->
         <script type="text/javascript" src="app/utils/util.service.js"></script>
@@ -126,6 +127,7 @@
         <script type="text/javascript" src="app/features/Canali/canali.controller.js"></script>
         <script type="text/javascript" src="app/features/Iscritti/iscritti.controller.js"></script>
         <script type="text/javascript" src="app/features/Segnalazioni/segnalazioni.controller.js"></script>
+        <script type="text/javascript" src="app/features/Utilita/utilita.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewChannel/newchannel.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewArticle/newarticle.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewArticle/Commenti/commenti.controller.js"></script>
