--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <script type="text/javascript" src="app/services/edizioni.service.js"></script>
         <script type="text/javascript" src="app/services/media.service.js"></script>
         <script type="text/javascript" src="app/services/utilita.service.js"></script>
+        <script type="text/javascript" src="app/services/segnalazioni.service.js"></script>
 
         <!-------- UTILS -------->
         <script type="text/javascript" src="app/utils/util.service.js"></script>
