--- a/app/features/Segnalazioni/segnalazioni.view.html
+++ b/app/features/Segnalazioni/segnalazioni.view.html
@@ -34,6 +34,7 @@
                     </button>
                 </div>
             </div>
+            <!-- ng-repeat="alert in segnalazioni.alerts | limitTo:utilita.options.pager.limit:-(utilita.options.pager.active*utilita.options.pager.limit)" -->
             <div class="row article_element margin-top-10px">
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
@@ -47,7 +48,7 @@
                                 <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 no-padding">
                                     <div class="row no-padding">
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <p class="font-bold no-padding no-margin">Gigi D'Alessio</p>
+                                            <p class="font-bold no-padding no-margin">Gigi</p>
                                         </div>
                                     </div>
                                     <div class="row no-padding">
