--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <script type="text/javascript" src="app/features/Details/NewChannel/newchannel.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewArticle/newarticle.controller.js"></script>
         <script type="text/javascript" src="app/features/Details/NewArticle/Commenti/commenti.controller.js"></script>
+        <script type="text/javascript" src="app/features/Details/NewUtility/newutility.controller.js"></script>
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
