--- a/app/features/Dashboard/dashboard.view.html
+++ b/app/features/Dashboard/dashboard.view.html
@@ -16,7 +16,7 @@
     <div class="row page_content">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <h3>Notifiche</h3>
-            <div class="row bgcolor-light-grey border-radius padding-10px">
+            <div class="row bgcolor-light-grey border-radius padding-10px margin-left-0 margin-right-0">
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
                     <img class="height-25px width-25px" src="app/assets/images/alert.jpg"/>
                 </div>
@@ -27,7 +27,7 @@
                     <button class="btn btn-transparent no-padding margin-top-10px">VERIFICA</button>
                 </div>
             </div>
-            <div class="row bgcolor-light-grey border-radius padding-10px margin-top-10px">
+            <div class="row bgcolor-light-grey border-radius padding-10px margin-top-10px margin-left-0 margin-right-0">
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
                     <img class="height-25px width-25px" src="app/assets/images/report-unwatched.jpg"/>
                 </div>
@@ -40,8 +40,8 @@
             </div>
             <h3 class="margin-top-80px">Statistiche</h3>
             <p class="color-mid-grey font-medium"><span>Savigliano Smart</span> è attivo dal <span>18 gennaio 2017</span> e conta <span>64 edizioni</span></p>
-            <div class="row margin-top-20px display-flex">
-                <div class="col-lg-5 col-sm-5 col-md-5 col-xs-5 border-grey border-radius no-padding">
+            <div class="row margin-top-20px display-flex margin-left-0 margin-right-0">
+                <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6 border-grey border-radius no-padding margin-right-20px">
                     <div class="border-bottom-grey padding-left-15px padding-right-15px">
                         <p class="color-blue font-xl font-normal margin-top-15px">Piattaforma</p>
                         <p class="color-black font-bold font-xl margin-top-15px no-margin-bottom">1312</p>
@@ -69,8 +69,7 @@
                         <div class="row"></div>
                     </div>
                 </div>
-                <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1"></div>
-                <div class="col-lg-5 col-sm-5 col-md-5 col-xs-5 border-grey border-radius no-padding">
+                <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6 border-grey border-radius no-padding margin-left-20px">
                     <div class="border-bottom-grey padding-left-15px padding-right-15px">
                         <div class="row margin-top-15px">
                             <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
