--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <script type="text/javascript" src="app/services/category.service.js"></script>
         <script type="text/javascript" src="app/services/edizioni.service.js"></script>
         <script type="text/javascript" src="app/services/media.service.js"></script>
+        <script type="text/javascript" src="app/services/dashboard.service.js"></script>
 
         <!-------- UTILS -------->
         <script type="text/javascript" src="app/utils/util.service.js"></script>
