--- a/app/features/Dashboard/dashboard.view.html
+++ b/app/features/Dashboard/dashboard.view.html
@@ -15,31 +15,48 @@
 
     <div class="row page_content">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-            <h3>Notifiche</h3>
-            <div class="row bgcolor-light-grey border-radius padding-10px margin-left-0 margin-right-0">
-                <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
-                    <img class="height-25px width-25px" src="app/assets/images/alert.jpg"/>
-                </div>
-                <div class="col-lg-10 col-sm-9 col-md-9 col-xs-9 margin-top-10px">
-                    <p class="font-medium">Su Corriere di Savigliano sono presenti <span>4</span> segnalazioni non verificate</p>
-                </div>
-                <div class="col-lg-1 col-sm-2 col-md-2 col-xs-2">
-                    <button class="btn btn-transparent no-padding margin-top-10px">VERIFICA</button>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+                    <h3>Notifiche</h3>
+                    <p ng-if="dash.options.notificationsLoaded && dash.stats.alerts.length == 0" class="color-mid-grey font-medium"><span>Non ci sono nuove notifiche</p>
+                    <p ng-if="!dash.options.notificationsLoaded" class="color-mid-grey font-medium"><span>Caricamento notifiche ...</p>
+
+                    <div ng-if="dash.options.notificationsLoaded">
+                        <div class="row bgcolor-light-grey border-radius padding-10px margin-left-0 margin-right-0" ng-repeat="alert in dash.stats.alerts" ng-if="alert.count > 0">
+                            <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
+                                <img class="height-25px width-25px" src="app/assets/images/alert.jpg"/>
+                            </div>
+                            <div class="col-lg-10 col-sm-9 col-md-9 col-xs-9 margin-top-10px" style="padding-left:0">
+                                <p class="font-medium">Su {{dash.channelNameById(alert.channel)}} sono presenti <span>{{alert.count}}</span> segnalazioni non verificate</p>
+                            </div>
+                            <div class="col-lg-1 col-sm-2 col-md-2 col-xs-2">
+                                <button class="btn btn-transparent no-padding margin-top-10px" ui-sref="home.contenuti">VERIFICA</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- SEGNALAZIONI
+                    <div class="row bgcolor-light-grey border-radius padding-10px margin-top-10px margin-left-0 margin-right-0">
+                        <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
+                            <img class="height-25px width-25px" src="app/assets/images/report-unwatched.jpg"/>
+                        </div>
+                        <div class="col-lg-10 col-sm-9 col-md-9 col-xs-9 margin-top-10px">
+                            <p class="font-medium">Ci sono <span>3</span> nuove notizie inviate dagli utenti</p>
+                        </div>
+                        <div class="col-lg-1 col-sm-2 col-md-2 col-xs-2">
+                            <button class="btn btn-transparent no-padding margin-top-10px">VERIFICA</button>
+                        </div>
+                    </div>
+                    -->
                 </div>
             </div>
-            <div class="row bgcolor-light-grey border-radius padding-10px margin-top-10px margin-left-0 margin-right-0">
-                <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 margin-top-10px">
-                    <img class="height-25px width-25px" src="app/assets/images/report-unwatched.jpg"/>
-                </div>
-                <div class="col-lg-10 col-sm-9 col-md-9 col-xs-9 margin-top-10px">
-                    <p class="font-medium">Ci sono <span>3</span> nuove notizie inviate dagli utenti</p>
-                </div>
-                <div class="col-lg-1 col-sm-2 col-md-2 col-xs-2">
-                    <button class="btn btn-transparent no-padding margin-top-10px">VERIFICA</button>
+
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+                    <h3 class="margin-top-80px">Statistiche</h3>
+                    <!--<p class="color-mid-grey font-medium"><span>Savigliano Smart</span> è attivo dal <span>18 gennaio 2017</span> e conta <span>64 edizioni</span></p>-->
                 </div>
             </div>
-            <h3 class="margin-top-80px">Statistiche</h3>
-            <p class="color-mid-grey font-medium"><span>Savigliano Smart</span> è attivo dal <span>18 gennaio 2017</span> e conta <span>64 edizioni</span></p>
+
             <div class="row margin-top-20px display-flex margin-left-0 margin-right-0">
                 <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6 border-grey border-radius no-padding margin-right-20px" ng-if="dash.options.platformLoaded">
                     <div class="border-bottom-grey padding-left-15px padding-right-15px">
@@ -69,7 +86,7 @@
                         <div class="row"></div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6 border-grey border-radius no-padding margin-left-20px" ng-if="dash.options.channelLoaded">
+                <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6 border-grey border-radius no-padding" ng-if="dash.options.channelLoaded" ng-class="{'margin-left-20px': dash.user.isRedazione()}">
                     <div class="border-bottom-grey padding-left-15px padding-right-15px">
                         <div class="row margin-top-15px">
                             <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
