icon for channel

--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -99,7 +99,7 @@
                                         <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings" ui-sref="home.canali">ANNULLA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && !newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.lock()">BLOCCA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.unlock()">SBLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
+                                        <button class="btn btn-info btn-save-settings pull-right" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -159,7 +159,7 @@
                                         <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings" ui-sref="home.canali">ANNULLA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && !newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.lock()">BLOCCA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.unlock()">SBLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
+                                        <button class="btn btn-info btn-save-settings pull-right" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -273,7 +273,7 @@
                                         <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings" ui-sref="home.canali">ANNULLA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && !newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.lock()">BLOCCA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.unlock()">SBLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
+                                        <button class="btn btn-info btn-save-settings pull-right" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -315,7 +315,7 @@
                                         <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings" ui-sref="home.canali">ANNULLA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && !newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.lock()">BLOCCA</button>
                                         <button ng-if="!newchannel.new_channel.isNew && newchannel.new_channel.isLocked" class="btn btn-info btn-block-settings" ng-click="newchannel.unlock()">SBLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
+                                        <button class="btn btn-info btn-save-settings pull-right" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
